# test

./: 00-01 Downloading RIOT code.txt  00-02 RIOT Tutorials.txt  01 Fedora 33 - Docker install.txt  02 Docker config.txt  03 Use Docker to build RIOT.txt  04_install_DSView.txt  04_use far from linux.txt  README.md  android command-line tools.txt  github - use SSH key.txt  my_rsync.sh
test-FPGA/: README.md  quartus install.txt
test-FPGA/c4/Project01_Test_Led/: Chain1.cdf  led_test.qpf  led_test.qsf  led_test.qws  led_test.v  led_test.v.bak  led_test_assignment_defaults.qdf  led_test_nativelink_simulation.rpt  output_file.map
test-FPGA/c4/Project02_Test_Key/: key_test.asm.rpt  key_test.cdf  key_test.done  key_test.fit.rpt  key_test.fit.summary  key_test.flow.rpt  key_test.map.rpt  key_test.map.summary  key_test.pin  key_test.qpf  key_test.qsf  key_test.qws  key_test.sta.rpt  key_test.sta.summary  key_test.v  key_test.v.bak  key_test_assignment_defaults.qdf
test-FPGA/c4/Project03_Test_PLL/: pll_test.ipregen.rpt  pll_test.qpf  pll_test.qsf  pll_test.qws  pll_test.v  pll_test.v.bak  pll_test_assignment_defaults.qdf  pll_test_nativelink_simulation.rpt
test-FPGA/c4/Project05_CP2102_UART_V2/: Test05_project_CP2102_UART.qpf  Test05_project_CP2102_UART.qsf  Test05_project_CP2102_UART.qws  Test05_project_CP2102_UART_assignment_defaults.qdf  output_file.map
test-FPGA/c4/Project06_7SEG_LED/: smg_interface_demo.qpf  smg_interface_demo.qsf  tb2_ie_info.xml
test-FPGA/c4/Project07_MicroSD/: PLLJ_PLLSPE_INFO.txt  pll.v  pll_bb.v  sd_test.ipregen.rpt  sd_test.jdi  sd_test.qpf  sd_test.qsf  sd_test.qws  sd_test_assignment_defaults.qdf  stp1.stp
test-FPGA/c4/Project08_VGA/: PLLJ_PLLSPE_INFO.txt  pll.qip  pll.v  pll_bb.v  vga_test.ipregen.rpt  vga_test.qpf  vga_test.qsf  vga_test.qws  vga_test_assignment_defaults.qdf
test-FPGA/c4/Project09_GMII_Ethernet/: ethernet_test.jdi  ethernet_test.qpf  ethernet_test.qsf  ethernet_test.qws  ethernet_test.sdc  ethernet_test.sdc.bak  ethernet_test_assignment_defaults.qdf  ram.qip  ram.v  ram_bb.v  stp1.stp
test-FPGA/c4/blink/: blink.qpf  blink.qsf  blink.v  blink.v.bak
test-FPGA/c4/hdmi_leds_seg7-master/: PLLJ_PLLSPE_INFO.txt  README  altddio_out1.bsf  altddio_out1.cmp  altddio_out1.inc  altddio_out1.ppf  altddio_out1.qip  altddio_out1.v  altddio_out1_bb.v  altddio_out1_inst.v  display.v  hdmi.v  hdmi_leds.v  hvsync.v  max10.qpf  max10_50.ipregen.rpt  max10_50.qsf  max10_50.qws  max10_8.qsf  max10_8.qws  max10_8.sdc  max10_8_assignment_defaults.qdf  mypll.qip  mypll.v  mypll_bb.v  qmegawiz_errors_log.txt
test-FPGA/c4/test1_bl/: test1_bl.qpf  test1_bl.qsf  test1_bl.qws  test1_bl.v
test-FPGA/c4/test2_bl/: test2_bl.qpf  test2_bl.qsf  test2_bl.qws  test2_bl.sv  test2_bl.sv.bak
test-FPGA/c4/test_mem_file/: mem_f.qpf  mem_f.qsf  mem_f.qws  mem_f.v  mem_f.v.bak
test-FPGA/c4/tst1_led7/: led7.qpf  led7.qsf  led7.qws  led7.v  led7.v.bak  unnamed.qsys  unnamed.sopcinfo
test-FPGA/m2/Project06_7SEG_LED/: cr_ie_info.json  smg_interface_demo.qsf  (+2 more)
test-IR/IR-scan/: README.md
test-IR/IR-send/: README.md
test-SNTP/step02/: Makefile
test-SNTP/step04/: main.c
test-SPI/: README.md
test-SPI/step01-matrixLED/: Makefile  main.c
test-SPI/step02-matrixLED/: main.c
test-SPI/step03-matrixLED/: Makefile  main.c
test-SPI/step04-matrixLED/: main.c
test-SPI/step06-matrixLED-simple/: Makefile  main.c
test-SPI/step06-matrixLED-sntp/: README.md
test-lcd/hd44780/: main.c
test-mk/Air101/: README.md  W806_SDK-linux
test-mk/Air103/: README.md  W806_SDK-linux
test-mk/Air105/: README.md
test-mk/MilkV-Duo/: 00-02 Milk V Duo tips.md  00-02 Milk V Duo tips.txt  02 MilkV-DuoS tips.md  03 Milk V Duo and usb Wifi.txt  README.md
test-mk/attiny13a/: README.md
test-mk/ch32v003/: README.md
test-mk/ch32v203c8t6/: README.md
test-mk/ch32v203c8t6/sdk-prj/01_gpio/01_blink_freertos/: CMakeLists.txt  FreeRTOS  README.md  vendor
test-mk/ch32v203c8t6/sdk-prj/01_gpio/01_blink_freertos/app/: main.c
test-mk/ch552/: README.md
test-mk/ch582m/: README.md
test-mk/ch582m/sdk_prj/01_gpio/01_blink_freertos/: CMakeLists.txt  FreeRTOS  README.md  vendor
test-mk/ch582m/sdk_prj/01_gpio/01_blink_freertos/app/: main.c
test-mk/esp32c3/: 02_new_prj.txt
test-mk/rp2040/: 98-cmsis-daplink.rules  README.md  doc.txt
test-mk/rp2040/freertos-prj/: CMakeLists.txt
test-mk/rp2040/freertos-prj/02_TasksAndQueues/: main.c
test-mk/rp2040/freertos-prj/03_TaskScheduler/: main.c
test-mk/rp2040/freertos-prj/04_TaskMutex/: main.c
test-mk/rp2040/freertos-prj/05_Semaphores/: CMakeLists.txt
test-mk/rp2040/freertos-prj/06_TempSense/: CMakeLists.txt  main.c
test-mk/rp2040/freertos-prj/07_quadrature_encoder/: CMakeLists.txt
test-mk/rp2040/freertos-prj/freertos/: FreeRTOSConfig.h
test-mk/rp2350/: README.md
test-mk/rp2350/freertos_prj_riscv/: CMakeLists.txt  README.md
test-mk/rp2350/freertos_prj_riscv/freertos/: CMakeLists.txt
test-mk/rp2350/sdk_prj_riscv/: CMakeLists.txt  README.md
test-mk/rp2350/sdk_prj_riscv/01_usb_serial/: CMakeLists.txt
test-mk/stc15/: README.md
test-mk/w801/: README.md  create_gz.sh  tips.txt
test-mk/w802/: README.md
test-mk/w806/: README.md  create_gz.sh
test-mk/w861/: README.md
test-mqtt/: README.md
test-mqtt/step01-ds18b20/: Makefile  main.c
test-mqtt/step03-ds18b20_bmp280/: main.c
test-mqtt/step04-bmp280_si7021/: main.c
test-mqtt/step06-bme280-led1/: Makefile  main.c
test-mqtt/step06-bme280-led1-adc/: Makefile
test-mqtt/step06-bmp280-led1/: Makefile
test-mqtt/step07-bme280-led1-arc-lcd/: hd44780_params.h  lcd_param.h  pcf857x_params.h
test-rust/: README.md  risc-v_rust.txt
test-rust/rust/test_sqlx_ms1/: Cargo.toml
test-rust/rust/test_sqlx_ms1/src/: main.rs
test-rust/test1/: Cargo.toml
test-rust/test2/: Cargo.toml
test-rust/test_dns/: Cargo.toml
test-tm1637/step01/: Makefile
test-tm1637/step02/: Makefile  README.md  TM1637Display.h  main.cpp
test-tm1637/step02_00/: Makefile  main.cpp
test-tm1637/step03_sntp/: Makefile  README.md  TM1637Display.c
test-tm1637/step04_sntp/: README.md  main.c
(+3389 files in other folders)
