[package]
name = "test_sqlx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio + rustls
sqlx = { version = "0.5.7", features = [ "runtime-tokio-rustls", "mssql" ] }
# async-std + native-tls
# sqlx = { version = "0.5.7", features = [ "runtime-async-std-native-tls", "postgres" ] }
tokio = { version = "1.10.0", features = ["full"] }

